# intelligent-terminal

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  OpenConsole.slnx  PRIVACY.md  README.md  SUPPORT.md  TelemetryEvents.md  _build_msix_arm64.cmd  _build_msix_x64.cmd  _export_cer.cmd  _regen_logos.ps1  _run_build.cmd  _sign_msix.cmd  microsoft.txt  patterns.txt  soak-test-wtcli.ps1  stress-events-memory.ps1  test-events-wtcli.ps1  verify-classic-com.ps1
.cargo/: config.toml
.claude/: settings.local.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: LICENSE.txt  TelemetryEvents.md  agents_view.rs  copilot-instructions.md  input.rs  markdown_linter.yml  telemetry.rs
.github/ISSUE_TEMPLATE/: Bug_Report.yml
.github/instructions/: NOTICE.md  agent-skills.instructions.md  agents.instructions.md  (+6 more)
doc/: aka-ms-shortlinks.md  building-installer.md  building.md  configuring-powershell-autofix.md  configuring-shell-integration-autofix.md  faq.md  fuzzing.md  installing-dependencies.md  known-issues.md  quick-start-local-dev.md  release-automation-plan.md  release-check-list.md  release-ut-plan.md  security-model.md  spelling-ci-verify.md  spelling-proof.md  wtcli-commands.md
installer/: install-local-terminal.ps1
policies/: IntelligentTerminal.admx  IntelligentTerminal.ts
src/: common.build.pre.props
tools/: fre-test-reset.ps1  razzle.cmd
tools/wta/fuzz/: Cargo.toml
tools/wta/fuzz/fuzz_targets/: cmdline_builder.rs
wta/: AGENTS.md  OVERVIEW.md  PLAN.md  README.md  SKILLS.md  Terminalagent.md
(+903 files in other folders)
