[package]
name = "wta-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
] }

[dependencies.wta]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "cmdline_builder"
path = "fuzz_targets/cmdline_builder.rs"
doc = false
